2000-12-01  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk: Update instructional comments.
	(HTMLDIR): New macro.
	(HTMLMANIFEST): Likewise.
	(HTMLTARBALL): Likewise.
	(docbook-html): Make it a collection target only.
	(html-dir): New target.
	(html-output): Likewise.
	(html-graphics): Likewise.
	($(HTMLTARBALL)): Likewise.
	(docbook-print): Process TeX output for PDF.

	* doc/design/qmtest/iface.xml: Add ids.  Clean up markup and
	identation. 
	* doc/design/qmtest/qmtest.xml (prompt): New entity.
	* doc/design/qmtest/req.xml: Remove bogus tag.

	* doc/design/qmtrack/Makefile (DOCBITMAPS): New macro.
	* doc/design/qmtrack/user-interface.xml: Add ids.

2000-12-01  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/concepts.xml: Add ids.  Rearrange sections.
	* doc/design/qmtrack/idb-api.xml: Remove queries section.
	* doc/design/qmtrack/idb-impl.xml: Fix link.
	* doc/design/qmtrack/introduction.xml: Don't include requirements.xml. 
	* doc/design/qmtrack/qmtrack.xml (prompt): New entity.
	(qmtrack-cmd): Likewise.
	Don't include xml-repr.xml.  Include requirements.xml.
	* doc/design/qmtrack/requirements.xml: Make it a chapter.
	* doc/design/qmtrack/user-interface.xml: Edit command-line
	section.  Tidy formatting.
	* doc/design/qmtrack/xml-repr.xml: Make it a section.
	
2000-11-30  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/qmtrack.xml: Don't include user-api.xml.
	* doc/design/qmtrack/user-api.xml: Remove.
	
2000-11-30  Alex Samuel  <samuel@codesourcery.com>

	* doc/qm-html.dsl (html-manifest): Set true.
	(html-manifest-filename): Set to "docbook-html.manifest".
	(%use-id-as-filename%): Set to true.
	
	* doc/design/qmtrack/qmtrack.xml (api): New entity.
	(sc): Likewise.
	(introduction.xml): Likewise.
	Include introduction.
	* doc/design/qmtrack/introduction.xml: New file.
	* doc/design/qmtrack/requirements.xml: Make it a section.  Edit.
	* doc/design/qmtrack/concepts.xml: Revise introductory text.
	Add ids.  Rename time field.  
	